[package]
name = "phatik-backend"
version = "0.1.0"
authors = ["Tom Solberg <me@sbg.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.3.12"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
rusqlite = "0.24"
anyhow = "1.0.37"
parking_lot = "0.11.1"
log = "0.4"
mowl = "2.1.1"
