[package]
name = "phatik-backend"
version = "0.1.0"
authors = ["Tom Solberg <me@sbg.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "models" }
database = { path = "database" }

tide-websockets = { version = "0.2.0" }
tide = { version = "0.16.0", default-features = false, features = ["h1-server"] }
async-std = { version = "1.7.0", features = ["attributes"] }

rusqlite = "0.24"
log = "0.4"
simplelog = "0.9.0"
anyhow = "1.0.37"
