[package]
name = "database"
version = "0.1.0"
authors = ["Tom Solberg <tom.solberg@embark-studios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models"}
rusqlite = "0.24"
log = "0.4"
anyhow = "1.0.37"

[patch.crates-io]
syn = { version = "1.0.60", git = "https://github.com/dtolnay/syn", features = [], default_features = false }
