[package]
name = "models"
version = "0.1.0"
authors = ["Tom Solberg <tom.solberg@embark-studios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
serde_json = { version = "1", default_features = false }
serde = { version = "1", features = ["derive"], default_features = false }
